Tested the clementine db Ok

--- a/Loved2Playlist/Sciendo.Clementine.DataAccess/Sciendo.Clementine.DataAccess.csproj
+++ b/Loved2Playlist/Sciendo.Clementine.DataAccess/Sciendo.Clementine.DataAccess.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataProvider.cs" />
     <Compile Include="DataTypes\ClementineTrack.cs" />
     <Compile Include="IDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
