--- a/Loved2Playlist/Sciendo.Love2Playlist/App.config
+++ b/Loved2Playlist/Sciendo.Love2Playlist/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <configSections>
+    <section name="lastFm" type="Sciendo.Love2Playlist.Processor.Configuration.LastFmConfigurationSection, Sciendo.Love2Playlist.Processor" />
+    <section name="playlist" type="Sciendo.Love2Playlist.Processor.Configuration.PlaylistConfigurationSection, Sciendo.Love2Playlist.Processor" />
+  </configSections>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <lastFm root = "http://ws.audioscrobbler.com/2.0/" method="user.getlovedtracks" appKey = "67b6145c521d4ca0e31ef35c3032d320" user = "scentMaster" format = "json"/>
+  <playlist fileName = "lastFmLoved" clementineDatabaseFile = "C:\Users\octo\.config\Clementine\clementine.db"/>
 </configuration>
