--- a/Playlist.Persister/Sciendo.Playlist.Persister/Sciendo.Playlist.Persister.csproj
+++ b/Playlist.Persister/Sciendo.Playlist.Persister/Sciendo.Playlist.Persister.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</ProjectGuid>
+    <ProjectGuid>{4B5C7A63-F547-45C0-9F31-C62F58E2B093}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sciendo.Common.IO</RootNamespace>
-    <AssemblyName>Sciendo.Common.IO</AssemblyName>
+    <RootNamespace>Sciendo.Playlist.Persister</RootNamespace>
+    <AssemblyName>Sciendo.Playlist.Persister</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Sciendo.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Sciendo.Common.1.0.0-Build00017\lib\net40\Sciendo.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,20 +48,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContentCopier.cs" />
-    <Compile Include="ContentMover.cs" />
-    <Compile Include="ContentWriterBase.cs" />
-    <Compile Include="DirectoryEnumerator.cs" />
-    <Compile Include="DirectoryReadEventArgs.cs" />
-    <Compile Include="ExtensionsReadEventArgs.cs" />
-    <Compile Include="FileEnumerator.cs" />
-    <Compile Include="IContentWriter.cs" />
-    <Compile Include="IDirectoryEnumerator.cs" />
-    <Compile Include="IFileEnumerator.cs" />
-    <Compile Include="IFileReader.cs" />
+    <Compile Include="IPlaylistAnaliserFactory.cs" />
+    <Compile Include="PersisterProcessor.cs" />
+    <Compile Include="PlaylistAnaliserFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextFileReader.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Tag2File\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
+      <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sciendo.Playlist.Persister.Contracts\Sciendo.Playlist.Handler.Contracts.csproj">
+      <Project>{9ba6d39d-2fc1-4cc9-bdfb-4c630f3cbe44}</Project>
+      <Name>Sciendo.Playlist.Handler.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sciendo.Playlist.Persister.XSPF\Sciendo.Playlist.Handler.XSPF.csproj">
+      <Project>{632f3e8f-5230-48ca-a7f9-9a6486248d6e}</Project>
+      <Name>Sciendo.Playlist.Handler.XSPF</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
