Added the implementation for the IDirOps

--- a/Tag2File/Sciendo.Common.IO/Sciendo.Common.IO.csproj
+++ b/Tag2File/Sciendo.Common.IO/Sciendo.Common.IO.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ContentMover.cs" />
     <Compile Include="ContentWriterBase.cs" />
     <Compile Include="DirectoryEnumerator.cs" />
+    <Compile Include="DirectoryOperations.cs" />
     <Compile Include="DirectoryReadEventArgs.cs" />
     <Compile Include="ExtensionsReadEventArgs.cs" />
     <Compile Include="FileEnumerator.cs" />
