--- a/Playlist.Persister/Sciendo.Playlist.Persister.XSPF/Sciendo.Playlist.Handler.XSPF.csproj
+++ b/Playlist.Persister/Sciendo.Playlist.Persister.XSPF/Sciendo.Playlist.Handler.XSPF.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TagLib.Portable, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Playlist.cs" />
@@ -54,6 +58,10 @@
     <Compile Include="XSPFHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Tag2File\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</Project>
+      <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sciendo.Playlist.Persister.Contracts\Sciendo.Playlist.Handler.Contracts.csproj">
       <Project>{9ba6d39d-2fc1-4cc9-bdfb-4c630f3cbe44}</Project>
       <Name>Sciendo.Playlist.Handler.Contracts</Name>
