--- a/Playlist.Persister/Sciendo.Playlist.Persister.XSPF/packages.config
+++ b/Playlist.Persister/Sciendo.Playlist.Persister.XSPF/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Sciendo.Common" version="1.0.0-Build00017" targetFramework="net452" />
+  <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
 </packages>
