--- a/Playlist.Persister/Sciendo.Playlist.Persister/Sciendo.Playlist.Persister.csproj
+++ b/Playlist.Persister/Sciendo.Playlist.Persister/Sciendo.Playlist.Persister.csproj
@@ -46,18 +46,28 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TagLib.Portable, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPlaylistHandlerFactory.cs" />
     <Compile Include="PersisterProcessor.cs" />
     <Compile Include="PlaylistHandlerFactory.cs" />
+    <Compile Include="PlaylistType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProgressEventArgs.cs" />
     <Compile Include="TextFileReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Tag2File\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
       <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
       <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sciendo.Playlist.Handler.M3U\Sciendo.Playlist.Handler.M3U.csproj">
+      <Project>{B98EA142-0C16-4C1C-9666-D9506B349652}</Project>
+      <Name>Sciendo.Playlist.Handler.M3U</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sciendo.Playlist.Persister.Contracts\Sciendo.Playlist.Handler.Contracts.csproj">
       <Project>{9ba6d39d-2fc1-4cc9-bdfb-4c630f3cbe44}</Project>
