--- a/Playlist.Persister/Sciendo.PP/Sciendo.PP.csproj
+++ b/Playlist.Persister/Sciendo.PP/Sciendo.PP.csproj
@@ -60,21 +60,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tag2File\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
       <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
       <Name>Sciendo.Common.IO</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Tag2File\Sciendo.Common.Music.Tagging\Sciendo.Common.Music.Tagging.csproj">
-      <Project>{079B9E86-6A95-41D3-8CA3-E7FB34921812}</Project>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.Music.Tagging\Sciendo.Common.Music.Tagging.csproj">
+      <Project>{079b9e86-6a95-41d3-8ca3-e7fb34921812}</Project>
       <Name>Sciendo.Common.Music.Tagging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sciendo.Playlist.Persister.Contracts\Sciendo.Playlist.Handler.Contracts.csproj">
-      <Project>{9ba6d39d-2fc1-4cc9-bdfb-4c630f3cbe44}</Project>
-      <Name>Sciendo.Playlist.Handler.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sciendo.Playlist.Persister.XSPF\Sciendo.Playlist.Handler.XSPF.csproj">
-      <Project>{632f3e8f-5230-48ca-a7f9-9a6486248d6e}</Project>
-      <Name>Sciendo.Playlist.Handler.XSPF</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sciendo.Playlist.Persister\Sciendo.Playlist.Persister.csproj">
       <Project>{4b5c7a63-f547-45c0-9f31-c62f58e2b093}</Project>
