--- a/Tag2File/Sciendo.T2F/Sciendo.T2F.csproj
+++ b/Tag2File/Sciendo.T2F/Sciendo.T2F.csproj
@@ -63,9 +63,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
-      <Project>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</Project>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
       <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.Music.Tagging\Sciendo.Common.Music.Tagging.csproj">
+      <Project>{079b9e86-6a95-41d3-8ca3-e7fb34921812}</Project>
+      <Name>Sciendo.Common.Music.Tagging</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sciendo.T2F.Processor\Sciendo.T2F.Processor.csproj">
       <Project>{384a60ed-4c9a-4510-ac33-c1db974fc916}</Project>
