--- a/Common/Sciendo.Common.IO/Sciendo.Common.IO.csproj
+++ b/Common/Sciendo.Common.IO/Sciendo.Common.IO.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B98EA142-0C16-4C1C-9666-D9506B349652}</ProjectGuid>
+    <ProjectGuid>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sciendo.Playlist.Handler.M3U</RootNamespace>
-    <AssemblyName>Sciendo.Playlist.Handler.M3U</AssemblyName>
+    <RootNamespace>Sciendo.Common.IO</RootNamespace>
+    <AssemblyName>Sciendo.Common.IO</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,29 +38,27 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TagLib.Portable, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="M3UHandler.cs" />
+    <Compile Include="ContentCopier.cs" />
+    <Compile Include="ContentMover.cs" />
+    <Compile Include="ContentWriterBase.cs" />
+    <Compile Include="DirectoryEnumerator.cs" />
+    <Compile Include="DirectoryOperations.cs" />
+    <Compile Include="DirectoryReadEventArgs.cs" />
+    <Compile Include="ExtensionsReadEventArgs.cs" />
+    <Compile Include="FileEnumerator.cs" />
+    <Compile Include="IContentWriter.cs" />
+    <Compile Include="IDirectoryEnumerator.cs" />
+    <Compile Include="IDirectoryOperations.cs" />
+    <Compile Include="IFileEnumerator.cs" />
+    <Compile Include="IFileOperations.cs" />
+    <Compile Include="IFileReader.cs" />
+    <Compile Include="IFileWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Track.cs" />
+    <Compile Include="TextFileWriter.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Tag2File\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
-      <Project>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</Project>
-      <Name>Sciendo.Common.IO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sciendo.Playlist.Persister.Contracts\Sciendo.Playlist.Handler.Contracts.csproj">
-      <Project>{9BA6D39D-2FC1-4CC9-BDFB-4C630F3CBE44}</Project>
-      <Name>Sciendo.Playlist.Handler.Contracts</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
