--- a/Lister/LibLister/LibLister.csproj
+++ b/Lister/LibLister/LibLister.csproj
@@ -64,6 +64,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
+      <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sciendo.Library.Lister\Sciendo.Library.Lister.csproj">
       <Project>{5482f7fd-e59e-4a01-8082-37e1ac442015}</Project>
       <Name>Sciendo.Library.Lister</Name>
