--- a/Lister/Sciendo.Library.Lister/Sciendo.Library.Lister.csproj
+++ b/Lister/Sciendo.Library.Lister/Sciendo.Library.Lister.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Scope.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tag2File\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
       <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
       <Name>Sciendo.Common.IO</Name>
     </ProjectReference>
