--- a/Loved2Playlist/Sciendo.Love2Playlist.Processor/Sciendo.Love2Playlist.Processor.csproj
+++ b/Loved2Playlist/Sciendo.Love2Playlist.Processor/Sciendo.Love2Playlist.Processor.csproj
@@ -52,6 +52,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TagLib.Portable, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollectLoveEventArgs.cs" />
@@ -69,15 +73,11 @@
     <Compile Include="ILoveProvider.cs" />
     <Compile Include="DataTypes\Image.cs" />
     <Compile Include="DataTypes\LovePage.cs" />
-    <Compile Include="IPersister.cs" />
-    <Compile Include="IPlaylistCreator.cs" />
     <Compile Include="IUrlProvider.cs" />
     <Compile Include="LastFmProvider.cs" />
     <Compile Include="LoveProvider.cs" />
     <Compile Include="DataTypes\LoveTrack.cs" />
     <Compile Include="DataTypes\AdditionalAttributes.cs" />
-    <Compile Include="Persister.cs" />
-    <Compile Include="PlaylistCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataTypes\Size.cs" />
     <Compile Include="DataTypes\Streamable.cs" />
@@ -88,6 +88,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</Project>
+      <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Playlists\Sciendo.Playlists\Sciendo.Playlists.csproj">
+      <Project>{9BA6D39D-2FC1-4CC9-BDFB-4C630F3CBE44}</Project>
+      <Name>Sciendo.Playlists</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sciendo.Clementine.DataAccess\Sciendo.Clementine.DataAccess.csproj">
       <Project>{2b40618b-cbd9-4c23-b142-6a110c9d8cf3}</Project>
       <Name>Sciendo.Clementine.DataAccess</Name>
