--- a/Loved2Playlist/Sciendo.Love2Playlist/Sciendo.Love2Playlist.csproj
+++ b/Loved2Playlist/Sciendo.Love2Playlist/Sciendo.Love2Playlist.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TagLib.Portable, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -58,6 +62,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
+      <Name>Sciendo.Common.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\Sciendo.Common.Music.Tagging\Sciendo.Common.Music.Tagging.csproj">
+      <Project>{079b9e86-6a95-41d3-8ca3-e7fb34921812}</Project>
+      <Name>Sciendo.Common.Music.Tagging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Playlists\Sciendo.Playlists\Sciendo.Playlists.csproj">
+      <Project>{9ba6d39d-2fc1-4cc9-bdfb-4c630f3cbe44}</Project>
+      <Name>Sciendo.Playlists</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sciendo.Clementine.DataAccess\Sciendo.Clementine.DataAccess.csproj">
       <Project>{2b40618b-cbd9-4c23-b142-6a110c9d8cf3}</Project>
       <Name>Sciendo.Clementine.DataAccess</Name>
