--- a/Common/Sciendo.Common.IO/Sciendo.Common.IO.csproj
+++ b/Common/Sciendo.Common.IO/Sciendo.Common.IO.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IFileReader.cs" />
     <Compile Include="IFileWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextFileReader.cs" />
     <Compile Include="TextFileWriter.cs" />
   </ItemGroup>
   <ItemGroup />
