--- a/Lister/Sciendo.Library.Lister.Tests.Unit/packages.config
+++ b/Lister/Sciendo.Library.Lister.Tests.Unit/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net452" />
+  <package id="RhinoMocks" version="4.0.0-alpha3" targetFramework="net452" />
 </packages>
