--- a/Loved2Playlist/Sciendo.Clementine.DataAccess.Tests.Integration/packages.config
+++ b/Loved2Playlist/Sciendo.Clementine.DataAccess.Tests.Integration/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.8.1" targetFramework="net452" />
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
+  <package id="RhinoMocks" version="4.0.0-alpha3" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net452" />
 </packages>
