--- a/Loved2Playlist/Sciendo.Love2Playlist.Tests.Unit/packages.config
+++ b/Loved2Playlist/Sciendo.Love2Playlist.Tests.Unit/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.8.1" targetFramework="net452" />
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net452" />
+  <package id="RhinoMocks" version="4.0.0-alpha3" targetFramework="net452" />
 </packages>
