--- a/PlaylistMixx/Sciendo.PMP/packages.config
+++ b/PlaylistMixx/Sciendo.PMP/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net452" />
+  <package id="Dapper" version="1.50.4-alpha1-00070" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net452" />
   <package id="TagLib.Portable" version="1.0.4" targetFramework="net452" />
 </packages>
