--- a/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.csproj
+++ b/PlaylistMixx/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor/Sciendo.Playlist.Mixx.Processor.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24783742-C936-431E-91F5-766A6D586FFE}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{E6BD2595-6C1C-4D58-BA0F-02F6424BCD09}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sciendo.PP</RootNamespace>
-    <AssemblyName>Sciendo.PP</AssemblyName>
+    <RootNamespace>Sciendo.Playlist.Mixx.Processor</RootNamespace>
+    <AssemblyName>Sciendo.Playlist.Mixx.Processor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommandLine, Version=2.0.275.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,36 +39,35 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TagLib.Portable, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
+      <HintPath>..\..\..\packages\TagLib.Portable.1.0.4\lib\portable-net45+win+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\TagLib.Portable.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Options.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="IMixxxProcessor.cs" />
+    <Compile Include="MixxxProcessorFactory.cs" />
+    <Compile Include="MixxxPullProcessor.cs" />
+    <Compile Include="MixxxPushProcessor.cs" />
+    <Compile Include="MixxxProcessorProgressEventHandler.cs" />
+    <Compile Include="ProcessingType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
-      <Project>{d90fb487-ba09-4509-abe6-615f15e3ab45}</Project>
+    <ProjectReference Include="..\..\..\Common\Sciendo.Common.IO\Sciendo.Common.IO.csproj">
+      <Project>{D90FB487-BA09-4509-ABE6-615F15E3AB45}</Project>
       <Name>Sciendo.Common.IO</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\Sciendo.Common.Music.Tagging\Sciendo.Common.Music.Tagging.csproj">
-      <Project>{079b9e86-6a95-41d3-8ca3-e7fb34921812}</Project>
-      <Name>Sciendo.Common.Music.Tagging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Playlists\Sciendo.Playlists\Sciendo.Playlists.csproj">
+    <ProjectReference Include="..\..\..\Playlists\Sciendo.Playlists\Sciendo.Playlists.csproj">
       <Project>{9ba6d39d-2fc1-4cc9-bdfb-4c630f3cbe44}</Project>
       <Name>Sciendo.Playlists</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Sciendo.Playlist.Persister\Sciendo.Playlist.Persister.csproj">
-      <Project>{4b5c7a63-f547-45c0-9f31-c62f58e2b093}</Project>
-      <Name>Sciendo.Playlist.Persister</Name>
+    <ProjectReference Include="..\..\Sciendo.Playlist.Mixx.DataAccess\Sciendo.Mixx.DataAccess.csproj">
+      <Project>{696c6171-1159-4a63-b144-1a621d53e9e7}</Project>
+      <Name>Sciendo.Mixx.DataAccess</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
